fix on ios and wp8 by opening database with db extension; reset undo stack on successful calculation; install on device howto; prevent failure when closing input-container; chain db transactions with successful opendatabase

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -24,10 +24,10 @@ div#image-container {
 }
 
 #image-container > svg {
-  height: 100%;
+  max-height: 100%;
   margin: 0px 36px;
   top: 50%;
-  width: calc(100% - 72px);
+  max-width: calc(100% - 72px);
 }
 
 #input-open, #output-open {
